--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,134 @@
-.App {
-  text-align: center;
+/*=====================
+  Global styles
+======================*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+::before,
+::after {
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  position: relative;
+  font-size: 16px;
+  line-height: 1.5;
+  overflow-x: hidden;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+a {
+  text-decoration: none;
 }
 
-.App-link {
-  color: #61dafb;
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-@keyframes App-logo-spin {
+/*=====================
+  Search bar styles
+======================*/
+.box-container {
+  margin: auto;
+  margin-top: 20%;
+  position: relative;
+  width: 300px;
+  height: 42px;
+  border: 4px solid #2980b9;
+  padding: 0px 10px;
+  border-radius: 50px;
+}
+
+.elements-container {
+  width: 100%;
+  height: 100%;
+  vertical-align: middle;
+}
+
+.search-input {
+  border: none;
+  height: 100%;
+  width: 100%;
+  padding: 0px 5px;
+  border-radius: 50px;
+  font-size: 18px;
+  color: #424242;
+  font-weight: 400;
+}
+
+.search-input:focus {
+  outline: none;
+}
+
+.search-button {
+  padding: 0;
+  border: none;
+  background: none;
+}
+
+.search-icon {
+  width: 100%;
+}
+
+/*=====================
+  Loader styles
+======================*/
+.loading-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
+  padding: 0;
+}
+
+.loading-text li {
+  float: left;
+  background: #e84e2a;
+  padding: 15px 20px;
+  font-size: 20px;
+  margin: 10px;
+  color: #fff;
+  animation: animate 1s infinite alternate;
+  perspective: 500px;
+  -webkit-perspective: 500px;
+}
+
+@keyframes animate {
   from {
-    transform: rotate(0deg);
+    transform: scale(1) translateY(0) rotateX(0deg);
+    box-shadow: 0 0 0 rgba(0, 0, 0, 0);
   }
+
   to {
-    transform: rotate(360deg);
+    transform: scale(1.35) translateY(-25px) rotateX(45deg);
+    box-shadow: 0 30px 5px rgba(0, 0, 0, 0.1);
   }
+}
+
+.loading-text li:nth-child(1) {
+  animation-delay: 0.1s;
+}
+.loading-text li:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.loading-text li:nth-child(3) {
+  animation-delay: 0.3s;
+}
+.loading-text li:nth-child(4) {
+  animation-delay: 0.4s;
+}
+.loading-text li:nth-child(5) {
+  animation-delay: 0.5s;
+}
+.loading-text li:nth-child(6) {
+  animation-delay: 0.6s;
+}
+.loading-text li:nth-child(7) {
+  animation-delay: 0.7s;
 }
