--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,14 @@
 /*=====================
+  Custom variables
+======================*/
+:root {
+  --bg-dark-1: #191919;
+  --bg-trans-dark-2: rgba(0, 0, 0, 0.7);
+  --skin-color: #e46c37;
+  --skin-color-2: #e84e2a;
+}
+
+/*=====================
   Global styles
 ======================*/
 * {
@@ -28,6 +38,120 @@ ul {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+/*=====================
+  Navigation bar styles
+======================*/
+nav {
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  right: 0;
+  top: 0;
+  padding: 0 5%;
+  height: 80px;
+  background-color: var(--bg-dark-1);
+}
+
+nav .logo {
+  float: left;
+  /* width: 40%; */
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+nav .links {
+  float: right;
+  width: 30%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+nav .links .a-link {
+  display: block;
+  padding: 1em;
+  font-size: 16px;
+  font-weight: bold;
+  color: var(--skin-color);
+  text-decoration: none;
+}
+
+#nav-toggle {
+  position: absolute;
+  top: -100px;
+}
+
+nav .icon-burger {
+  display: none;
+  position: absolute;
+  right: 5%;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+nav .icon-burger .line {
+  width: 30px;
+  height: 5px;
+  background-color: var(--skin-color);
+  margin: 5px;
+  border-radius: 3px;
+  transition: all 0.3s ease-in-out;
+}
+
+@media screen and (max-width: 768px) {
+  nav .logo {
+    float: none;
+    width: auto;
+    justify-content: center;
+  }
+
+  nav .links {
+    float: none;
+    position: fixed;
+    z-index: 9;
+    left: 0;
+    right: 0;
+    top: 80px;
+    bottom: 100%;
+    width: auto;
+    height: auto;
+    flex-direction: column;
+    justify-content: space-evenly;
+    background-color: var(--bg-trans-dark-2);
+    overflow: hidden;
+    transition: all 0.5s ease-in-out;
+  }
+
+  nav .links .a-link {
+    font-size: 20px;
+  }
+
+  nav :checked ~ .links {
+    bottom: 300px;
+  }
+
+  nav .icon-burger {
+    display: block;
+  }
+
+  nav :checked ~ .icon-burger .line:nth-child(1) {
+    transform: translateY(10px) rotate(225deg);
+  }
+
+  nav :checked ~ .icon-burger .line:nth-child(3) {
+    transform: translateY(-10px) rotate(-225deg);
+  }
+
+  nav :checked ~ .icon-burger .line:nth-child(2) {
+    opacity: 0;
+  }
 }
 
 /*=====================
@@ -89,7 +213,7 @@ ul {
 
 .loading-text li {
   float: left;
-  background: #e84e2a;
+  background: var(--skin-color-2);
   padding: 15px 20px;
   font-size: 20px;
   margin: 10px;
@@ -131,4 +255,14 @@ ul {
 }
 .loading-text li:nth-child(7) {
   animation-delay: 0.7s;
+}
+
+/*=====================
+  Home Page styles
+======================*/
+.home-page {
+  border: 2px solid saddlebrown;
+  background-color: springgreen;
+  height: 100vh;
+  margin-top: 80px;
 }
