--- a/src/App.css
+++ b/src/App.css
@@ -266,3 +266,9 @@ nav .icon-burger .line {
   height: 100vh;
   margin-top: 80px;
 }
+
+.register-padding {
+  padding-top: 100px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
